--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CouchMirage</string>
+    <string name="clear">clear</string>
+    <string name="measure">measure</string>
 </resources>
