--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,7 +44,7 @@
     <string name="red_advise_5">Try to change the viewing angle</string>
     <string name="red_advise_6">Try to recognize another surface</string>
 
-    <string name="yellow_advise_1">Press the Ruler button</string>
+    <string name="yellow_advise_1">Press the Clear button</string>
     <string name="yellow_advise_2">Select 3 points on the ground</string>
     <string name="yellow_advise_3">Select height</string>
     <string name="yellow_advise_4">Confirm shape</string>
